--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "name": "community/news",
     "type": "typo3-flow-package",
-    "description": "Add description here",
+    "version": "dev-master",
+    "description": "Base News package for demonstration purposes and to be extended as needed",
     "require": {
         "typo3/flow": "*",
         "typo3/neos": "~1.2"
