--- a/Configuration/NodeTypes.yaml
+++ b/Configuration/NodeTypes.yaml
@@ -22,7 +22,7 @@
           label: 'Related'
   properties:
     creationDate:
-      type: date
+      type: DateTime
       defaultValue: 'now'
       ui:
         label: 'Creation date'
@@ -34,7 +34,7 @@
       validation:
         'TYPO3.Neos/Validation/DateTimeValidator': []
     archiveDate:
-      type: date
+      type: DateTime
       ui:
         label: 'Archive date'
         inspector:
