renamed property `creationDate` to `publishDate` and added a node migration file which can be applied calling `./flow node:migrate --version=20150605210500`

--- a/Configuration/NodeTypes.yaml
+++ b/Configuration/NodeTypes.yaml
@@ -21,7 +21,7 @@
         related:
           label: 'Related'
   properties:
-    creationDate:
+    publishDate:
       type: DateTime
       defaultValue: 'now'
       ui:
