--- a/composer.json
+++ b/composer.json
@@ -2,10 +2,11 @@
     "name": "community/news",
     "type": "typo3-flow-package",
     "version": "dev-master",
-    "description": "Base News package for demonstration purposes and to be extended as needed",
+    "description": "Base News package built on top of Flowpack.Listable",
     "require": {
         "typo3/flow": "*",
-        "typo3/neos": "~2.0"
+        "typo3/neos": "~2.0",
+        "flowpack/listable": "dev-master"
     },
     "autoload": {
         "psr-0": {
